had to remove float and change all sizes and margins for divs in about, to stop overlaps with footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -634,16 +634,20 @@ button {
         #area {
             background-color: red;
             width:100%;
+            height: 800px;
             display: block;
+            margin:20px;
         }
         
         #area-left {
             width:100%;
+            float:none;
         }
         
         #area-right {
             width:100%;
             height:50%;
+            float:none;
             background:url(../images/street.jpeg);
             background-position: center;
             background-repeat: no;
@@ -655,52 +659,49 @@ button {
         }
         
         #dog {
-            width:100%;
+            height: 800px;
+            float:none;
+            background-color: pink;
             display: block;
+            margin:20px;
         }
         
         #dog-left {
             width:0;
             height:0;
             background:none;
-            float:left;
         }
         
         #dog-right {
-            background:none;
-            width:100%;
-            /*background:url(../images/pooch1.jpeg);
-            background-position: center;
-            width:100%;
-            float:left;*/
-
+            float:none;
             
         }
-
         #dog-hidden {
             background:url(../images/pooch1.jpeg);
             background-position: center;
             width:100%;
             height:50%;
-            float:left;
+            float:none;
         }
         
         #dog-p {
             color: #F2FAFF;
-            padding: 40px;
+            padding: 0;
             margin-top: 20px;
-            line-height: 2em;
+            float:none;
         }
         
         #coffee {
             width:100%;
+            height: 800px;
+            float:none;
             display: block;
-            height: 550px;
-            margin:0;
+            margin: 20px;
         }
         
         #coffee-left {
             width:100%;
+            float:none;
            
         }
         
@@ -708,8 +709,9 @@ button {
             background:url(../images/coffee3.jpeg);
             background-position: center;
             width:100%;
-            height:50%;
-            float:right;
+            height: 50%;
+            margin-bottom: 40px;
+            float:none;
         }
         
         #coffee-p {
@@ -721,20 +723,22 @@ button {
         
         #bake {
             width:100%;
-            height: 550px;
+            height: 800px;
+            margin-top: 30px;
             display: block;
+            float:none;
         }
         
         #bake-left {
             width:0;
             height:0;
             background:none;
-            float:left;
+            float:none;
         }
         
         #bake-right {
             width:100%;
-            float: left;
+            float:none;
 
             
         }
@@ -744,7 +748,7 @@ button {
             background-position: center;
             width:100%;
             height:50%;
-            float:left;
+            float:none;
         }
         
         #bake-p {
@@ -752,19 +756,21 @@ button {
             padding: 40px;
             margin-top: 20px;
             line-height: 2em;
+            float:none;
         }
         
         
         #food {
             width:100%;
             display: block;
-            height: 550px;
-            margin:0;
+            height: 800px;
+            margin:20px;
+            float:none;
         }
         
         #food-left {
             width:100%;
-            float:left;
+            float:none;
         }
         
         #food-right {
@@ -772,7 +778,7 @@ button {
             background-position: center;
             width:100%;
             height:50%;
-            float:right;
+            float:none;
         }
         
         
@@ -788,14 +794,14 @@ button {
             color:#F2FAFF;
             display: block;
             height: auto;
-            margin:40px 0;
+            margin:80p 40px 40px 40px;
         }
         
         #goals-ethics-left {
         
             width:100%;
             height:100%;
-            float:left;
+            float:none;
             padding:20px;
         }
         
@@ -808,7 +814,7 @@ button {
         #goals-ethics-right {
         
             width:100%;
-            float:left;
+            float:none;
             padding:20px;
         }
         
@@ -818,7 +824,7 @@ button {
             margin:0;
         }
         
-        
+      
 }
 
 
